# IF-microstate_with_HMM

./: .gitignore  01_preprocess.py  02_hmm_train.py  03_analyze_dwell_occ.py  04_analyze_transition.py  05_plot_topomap.py  LICENSE  README.md  pyproject.toml
