[project]
name = "eeg-microstate-aging"
version = "0.1.0"
description = "EEG alpha-band microstate HMM analysis for aging research"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "pandas>=2.2",
    "scikit-learn>=1.4",
    "hmmlearn>=0.3.2",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "statsmodels>=0.14",
    "mne>=1.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
